Infrastructure/kafka-service-spec.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: default
spec:
  selector:
    app: kafka
  type: NodePort
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
      name: http
      nodePort: 30036
